Fix mob death event handling, add new command, fixed bugs

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -9,3 +9,6 @@ commands:
   stopWaves:
       usage: /stopWaves
       description: stops all waves currently active.
+  killAllMonsters:
+      usage: /killAllMonsters
+      description: kills all hostile mobs which could be confused as Wave mobs.
