--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -32,7 +32,7 @@ commands:
         aliases: join
     teamsurvivalcreator:
         permission: teamsurvival.creator.*
-        usage: /tsc [new|open|close|setshop|addarena] {args}
+        usage: /tsc [open|close|setshop|addarena] {args}
         description: Container commmand for arena creation commands
         aliases: tsc
     
